refactor: day4